--- a/src/main/resources/assets/minetech/lang/en_US.lang
+++ b/src/main/resources/assets/minetech/lang/en_US.lang
@@ -2,4 +2,4 @@ language.name=English
 language.region=United States
 language.code=en_us
 
-item.minetech:syringe.name=Syringe
+tile.minetech:grindstone.name=Grindstone
