--- a/src/main/resources/assets/minetech/lang/en_US.lang
+++ b/src/main/resources/assets/minetech/lang/en_US.lang
@@ -4,12 +4,13 @@ language.code=en_us
 
 tile.minetech:grindstone.name=Grindstone
 tile.minetech:crank.name=Crank
-tile.minetech:sieve.name=Sieve
 
 item.minetech:dirty_ore_dust.iron.name=Dirty Iron Dust
 item.minetech:dirty_ore_dust.gold.name=Dirty Gold Dust
 
 item.minetech:ore_dust.iron.name=Iron Dust
 item.minetech:ore_dust.gold.name=Gold Dust
+
+item.minetech:pan.name=Pan
 
 tooltip.minetech:progress=Grinding Progress: %d
