Start working on fluids

--- a/src/main/resources/assets/minetech/lang/en_US.lang
+++ b/src/main/resources/assets/minetech/lang/en_US.lang
@@ -2,6 +2,8 @@ language.name=English
 language.region=United States
 language.code=en_us
 
+fluid.minetech:molten_iron=Molten Iron
+
 tile.minetech:grindstone.name=Grindstone
 tile.minetech:crank.name=Crank
 
